--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".views.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,8 +15,8 @@
         <ImageView
             android:id="@+id/logo"
             android:layout_width="50dp"
-            android:padding="10dp"
             android:layout_height="match_parent"
+            android:padding="10dp"
             android:src="@drawable/ic_baseline_menu_24"
             app:tint="@color/white" />
 
@@ -24,16 +24,18 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_gravity="center"
+            android:layout_marginLeft="80dp"
+            android:gravity="center"
             android:text="@string/app_name"
             android:textColor="@color/white"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="80dp"/>
+            android:textStyle="bold" />
 
     </LinearLayout>
 
-    <include layout="@layout/content_main" />
+    <include
+        android:id="@+id/contentLayout"
+        layout="@layout/content_main" />
 
 </LinearLayout>
